@@ -641,3 +641,5 @@ ZeroDivisionError: SeparableTransformation::eval_scalars yin interval is zero; c
 
 
 -- fix contour mappable to work under changes in clim, cmap
+
+-- port colorbar, current mappable to API
