@@ -68,7 +68,8 @@ def show():
         manager.show()
     import matplotlib
     matplotlib.interactive(True)
-    os.environ['PYTHONINSPECT'] = '1'
+    if rcParams['tk.pythoninspect']:
+        os.environ['PYTHONINSPECT'] = '1'
     if show._needmain:
         Tk.mainloop()
         show._needmain = False
